package ca.shahrestani.ali.edu.vanier.businesslogic;

public enum ReimbursementStatus {
    APPROVED,
    PENDING,
    REJECTED
}
