package ca.shahrestani.ali.edu.vanier.businesslogic;

public enum SortType {
    AMOUNT,
    DATE
}
