package ca.shahrestani.ali.edu.vanier.businesslogic;

public enum TransactionType {
    TRANSFER,
    REIMBURSEMENT,
    EXPENSE,
    DEPOSIT
}
